// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`countertop generateTributaryMaps should not create tributary maps of streams with different sources 1`] = `
Array [
  Map {
    "foo" => Object {
      "mouth": 0,
      "source": 0,
      "tributaryMap": Map {},
    },
    "bar" => Object {
      "mouth": 1,
      "source": 0,
      "tributaryMap": Map {
        "foo" => Object {
          "mouth": 0,
          "source": 0,
          "tributaryMap": Map {},
        },
      },
    },
  },
  Map {
    "foo" => Object {
      "mouth": 2,
      "source": 2,
      "tributaryMap": Map {},
    },
  },
]
`;

exports[`countertop generateTributaryMaps should return a partially populated tributary map if there are not enough outputs for all inputs 1`] = `
Array [
  Map {
    "foo" => Object {
      "mouth": 0,
      "source": 0,
      "tributaryMap": Map {},
    },
  },
]
`;
